[gd_scene load_steps=7 format=2]

[ext_resource path="res://Shaders/OutlineShader.shader" type="Shader" id=1]
[ext_resource path="res://Scripts/Shape.gd" type="Script" id=2]
[ext_resource path="res://Sprites/square_ink.png" type="Texture" id=3]
[ext_resource path="res://Scenes/ShapesParticleSys.tscn" type="PackedScene" id=4]

[sub_resource type="ShaderMaterial" id=2]

render_priority = 0
shader = ExtResource( 1 )
shader_param/outline_width = 2.0
shader_param/outline_color = Plane( 0.25, 0.6, 0.25, 0.8 )
shader_param/active = false
_sections_unfolded = [ "shader_param" ]

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 32, 32 )

[node name="Quadrado" type="Area2D"]

material = SubResource( 2 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 2 )
_sections_unfolded = [ "Material" ]
tipo = "Quadrado"
pontos = 1
multiplicador = 2
speed = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="." index="1"]

use_parent_material = true
position = Vector2( 0, 0.487679 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Material" ]

[node name="ShapesParticleSys" parent="." index="2" instance=ExtResource( 4 )]

[connection signal="input_event" from="." to="." method="_on_Quadrado_input_event"]

[connection signal="mouse_entered" from="." to="." method="_on_Shape_mouse_entered"]

[connection signal="mouse_exited" from="." to="." method="_on_Shape_mouse_exited"]


